@@ -239,7 +239,6 @@
                                 <option>null</option>,
                                 <option>tty</option>,
                                 <option>journal</option>,
-                                <option>journal+console</option>,
                                 <option>syslog</option>.  If the
                                 argument is omitted
                                 <option>--default-standard-output=</option>
